# squared

./: .gitignore  app.py  build.sh  pyproject.toml  requirements-system.txt  requirements.txt  vercel-build.sh  vercel.json
api/: index.py
static/css/: style.css
templates/: disclaimer.html  index.html
